--- a/index.html
+++ b/index.html
@@ -1,3 +1,46 @@
-<h2><p>Hello, World!</p></h2>
-<p>Hello, Love Junkies!</p>
-<p>Hi Tiziana! :) </p>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
+  <link rel="stylesheet" href="styles/font-awesome.min.css">
+  <link rel="stylesheet" style="text/css" href="styles/style.css">
+  <script src="/js/app.js"></script>
+  <script src="/js/bootstrap.min.js"></script>
+  <script src="http://d3js.org/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript"></script>
+</head>
+<body>
+
+  <div class="navigation_bar">
+    <ul>
+    <li class="tiziana"><img src="images/Tiziana.jpg" height="90"><span class="trying">The New Musical <br/>by Tiziana Perinotti</span></li>
+    <div class="others">
+      <li><a href="#"><span class="about">About the Show</span></a></li>
+      <li><a href="#">Cast & Creative</a></li>
+      <li><a href="#">Photos & Videos</a></li>
+      <li><a href="#">Contact Us</a></li>
+    </div>
+    </ul>  
+  </div>
+
+  <div class="content">
+    blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>
+
+  </div> <!-- content -->
+
+
+  <script>
+    // d3.selectAll("text")
+    //   .data([10,70])
+    //   .transition()
+    //   .duration(3000)
+    //   .attr("x", function(d){return d})
+    // d3.selectAll("text")
+    //   .transition()
+    //   .delay(3000)
+    //   .duration(2000)
+    //   .style("fill", "violet")
+    //   .style("stroke", "violet")
+  </script>
+</body>
+</html>
