--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
-  <script src="/js/app.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  
   <script src="/js/bootstrap.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
     <script type="text/javascript"></script>
@@ -15,15 +15,27 @@
     <ul>
     <li class="tiziana"><img src="images/Tiziana.jpg" height="90"><span class="trying">The New Musical <br/>by Tiziana Perinotti</span></li>
     <div class="others">
-      <li><a href="#"><span class="about">About the Show</span></a></li>
-      <li><a href="#">Cast & Creative</a></li>
-      <li><a href="#">Photos & Videos</a></li>
-      <li><a href="#">Contact Us</a></li>
+      <li><a href="#">Home</a></li>
+      <li><span class="about"><a href="#">About the Show</a>
+          <ul class="fallback">
+            <li><a href="about.html">About</a></li>
+            <li><a href="photos_videos.html">Photos & Videos</a></li>
+          </ul>
+          </span>
+      </li>
+      <li><a href="#">Cast & Creative</a>
+          <ul class="fallback">
+            <li><a href="cast.html">Cast</a></li>
+            <li><a href="creative.html">Creative</a></li>
+          </ul>
+      </li>
+      <li><a href="contacts.html">Contact Us</a></li>
     </div>
     </ul>  
   </div>
 
   <div class="content">
+
     blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>blah<br/>
 
   </div> <!-- content -->
@@ -41,6 +53,17 @@
     //   .duration(2000)
     //   .style("fill", "violet")
     //   .style("stroke", "violet")
+     $( document ).ready(function() {
+        $('.navigation_bar li ul').hide().removeClass('fallback');
+        $('.navigation_bar li').hover(
+          function () {
+            $('ul', this).stop().slideDown(100);
+          },
+          function () {
+            $('ul', this).stop().slideUp(100);
+          }
+        );
+     });
   </script>
 </body>
 </html>
