template for other pages

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
     <li class="tiziana"><img src="images/Tiziana.jpg" height="90"><span class="trying">The New Musical <br/>by Tiziana Perinotti</span></li>
     <div class="others">
-      <li><a href="#">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><span class="about"><a href="#">About the Show</a>
           <ul class="fallback">
             <li><a href="about.html">About</a></li>
