--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
   <div class="content">
 
-    <div class="title_lj">Love Junkies</div>
+    <div class="title_lj"><i class="fa fa-heart"></i> <em>Love Junkies</em> <i class="fa fa-heart"></i></div>
 
   </div> <!-- content -->
 
