--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="navigation_bar">
     <ul>
-    <li class="tiziana"><img src="images/Tiziana.jpg" height="90"><span class="trying">The New Musical <br/>by Tiziana Perinotti</span></li>
+   <!--  <li class="tiziana"><img src="images/Tiziana.jpg" height="90"><span class="trying">The New Musical <br/>by Tiziana Perinotti</span></li> -->
     <div class="others">
       <li><a href="index.html">Home</a></li>
       <li><span class="about"><a href="#">About the Show</a>
@@ -30,13 +30,16 @@
           </ul>
       </li>
       <li><a href="contacts.html">Contact Us</a></li>
+      <li><img src="images/fb-image.jpg" height="30" title="Our Facebook Page"></li>
     </div>
     </ul>  
   </div>
 
   <div class="content">
 
-    <div class="title_lj"><i class="fa fa-heart"></i> <em>Love Junkies</em> <i class="fa fa-heart"></i></div>
+    <div class="title_lj"><i class="fa fa-heart"></i> Love Junkies the Musical <i class="fa fa-heart"></i></div>
+    <div class="subtitle"><em>by Tiziana Perinotti</em></div>
+    <div class="tiziana"><img src="images/Tiziana.jpg" height="90"></div>
 
   </div> <!-- content -->
 
