--- a/cast.html
+++ b/cast.html
@@ -13,7 +13,7 @@
 
   <div class="navigation_bar">
     <ul>
-    <li class="tiziana"><img src="images/Tiziana.jpg" height="90"><span class="trying">The New Musical <br/>by Tiziana Perinotti</span></li>
+   <!--  <li class="tiziana"><img src="images/Tiziana.jpg" height="90"><span class="trying">The New Musical <br/>by Tiziana Perinotti</span></li> -->
     <div class="others">
       <li><a href="index.html">Home</a></li>
       <li><span class="about"><a href="#">About the Show</a>
@@ -30,6 +30,7 @@
           </ul>
       </li>
       <li><a href="contacts.html">Contact Us</a></li>
+      <li><img src="images/fb-image.jpg" height="30" title="Our Facebook Page"></li>
     </div>
     </ul>  
   </div>
@@ -40,6 +41,6 @@
   </div> <!-- content -->
 
 
-  
+
 </body>
 </html>
