late night commit

--- a/secret.html
+++ b/secret.html
@@ -1,14 +1,6 @@
 
 <!DOCTYPE HTML>
-<!--[if lte IE 7]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-  <script type="text/javascript">
-    window.location = "/upgrade.php";
-  </script>
-<![endif]-->
-<!--[if lte IE 8]><html class="lt-ie9"><![endif]-->
-<!--[if gt IE 9]><html><![endif]-->
-<!--[if !IE]>--> <html> <!--<![endif]-->
+<html> 
 
 
 <head>
@@ -44,7 +36,7 @@
 <!--START: Content Area-->
 <section class="contentArea cast">
   <div class="row">
-    <div class="small-12 columns"><h1>Broadway Cast</h1></div>
+    <div class="small-12 columns"><h1>Show Cast</h1></div>
   </div>
   <div class="row">
     <div class="small-12 medium-12 large-8 columns mainleft">
@@ -353,32 +345,9 @@
         
       </div>
     </div>
-    <div class="small-12 medium-12 large-4 columns mainright">
-      <div class="keeper widget">
-        <a class="popup-youtube" onClick="ga('send', 'event', 'Video Image', 'click_r_column_button', 'Watch Video Link');" href="https://www.youtube.com/watch?v=MnQKqtWT6nM"><img src="imgs/watch-video.jpg" "Watch Video" /></a>
-      </div>
-      <div class="keeper widget">
-        <a onClick="ga('send', 'event', 'Premium Image', 'click_r_column_button', 'Premium Tickets Link');" href="premium.php"><img src="imgs/buy-premium-tickets.png" "Buy Premium Tickets" /></a>
-      </div>
-      <!-- START: Twitter Feed -->
-        <div class="twitter-wrapper notkeeper widget">
-          <div class="twitter">
-            <div class="row widget-bar">
-              <div class="wrapper">
-                <div class="widget-label"><span>Twitter Feed</span></div>
-                <div class="text-center bg-red follow-us"><span><a href="https://twitter.com/ChicagoMusical">Follow Us <i class="fa fa-caret-right"></i></a></span></div>
-              </div>  
-            </div>
-            <div class="bg-white twitter-feed">
-              <div>
-                <a class="twitter-timeline" href="https://twitter.com/ChicagoMusical" data-widget-id="457608022508851200" data-chrome="noheader nofooter noborders transparent">Tweets by @ChicagoMusical</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-              </div>
-            </div>    
-          </div>  
-        </div>
-        <!-- END: Twitter Feed -->
-    </div>
+    <!-- <div class="small-12 medium-12 large-4 columns mainright">
+   
+    </div> -->
   </div>
 </section>
 <!-- END: Content Area -->
