--- a/secret.html
+++ b/secret.html
@@ -5,8 +5,8 @@
 
 <head>
   <title>Love Junkies the Musical</title>
-  <meta name="description" content="CHICAGO has everything that makes Broadway great: a universal tale of fame, fortune and all that jazz; one show-stopping-song after another; and the most astonishing dancing you've ever seen." />
-  <meta name="keywords" content="musicals, broadway, show, new york, chicago, musical, the musical, tony awards, ambassador theatre, magic" />
+  <meta name="description" content="Love Junkies has everything that makes a musical great: a universal tale of love, happiness and loneliness; one show-stopping-song after another; and the most astonishing dancing you've ever seen." />
+  <meta name="keywords" content="musicals, broadway, show, bay area, chicago, musical, the musical, awards, american conservatory theater" />
     <base href="http://chicagothemusical.com/" />
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -43,9 +43,9 @@
       <div>
         <div class="graybox">
           <div class="bio-popup-gallery">
-            <ul class="small-block-grid-3 large-block-grid-4">
-              <li class="cms-repeat" id="castmember1"><a class="bio-pupop-link" href="#bio-popup1"><span class="view-bio-overlay" style="display: none;"><img class="bio-overlay-image" src="imgs/view-bio.png" alt="" /></span><span class="testopacity-wrapper"><span class="testopacity" style="display: none;">&nbsp;</span><img id="castimage1" class="cms-editable bio-image" src="imgs/cast-bianca-marroquin.jpg" alt="" /></span><span id="info1" class="cms-editable info">BIANCA MARROQUIN<br />(Roxie Hart)</span></a></li>
-              <li class="cms-repeat" id="castmember2"><a class="bio-pupop-link" href="#bio-popup2"><span class="view-bio-overlay" style="display: none;"><img class="bio-overlay-image" src="imgs/view-bio.png" alt="" /></span><span class="testopacity-wrapper"><span class="testopacity" style="display: none;">&nbsp;</span><img id="castimage2" class="cms-editable bio-image" src="imgs/cast-amra-faye-wright.jpg" alt="" /></span><span id="info2" class="cms-editable info">AMRA-FAYE WRIGHT<br />(Velma Kelly)</span></a></li>
+            <ul class="small-block-grid-3 large-block-grid-3">
+              <li class="cms-repeat" id="castmember1"><a class="bio-pupop-link" href="#bio-popup1"><span class="view-bio-overlay" style="display: none;"><img class="bio-overlay-image" src="imgs/view-bio.png" alt="" /></span><span class="testopacity-wrapper"><span class="testopacity" style="display: none;">&nbsp;</span><img id="castimage1" class="cms-editable bio-image" src="/images/Tiziana.jpg" alt="" /></span><span id="info1" class="cms-editable info">TIZIANA PERINOTTI<br />(Gio)</span></a></li>
+              <li class="cms-repeat" id="castmember2"><a class="bio-pupop-link" href="#bio-popup2"><span class="view-bio-overlay" style="display: none;"><img class="bio-overlay-image" src="imgs/view-bio.png" alt="" /></span><span class="testopacity-wrapper"><span class="testopacity" style="display: none;">&nbsp;</span><img id="castimage2" class="cms-editable bio-image" src="imgs/cast-amra-faye-wright.jpg" alt="" /></span><span id="info2" class="cms-editable info">COUNT CLOVER<br />(Omar)</span></a></li>
               <li class="cms-repeat" id="castmember3"><a class="bio-pupop-link" href="#bio-popup3"><span class="view-bio-overlay" style="display: none;"><img class="bio-overlay-image" src="imgs/view-bio.png" alt="" /></span><span class="testopacity-wrapper"><span class="testopacity" style="display: none;">&nbsp;</span><img id="castimage3" class="cms-editable bio-image" src="/cms-assets/images/390901.190fitzgc.jpg?rand=0.8027577893808484" alt="" /></span><span id="info3" class="cms-editable info">CHRISTOPHER FITZGERALD<br />(Billy Flynn)</span></a></li>
               <li class="cms-repeat" id="castmember4"><a class="bio-pupop-link" href="#bio-popup4"><span class="view-bio-overlay" style="display: none;"><img class="bio-overlay-image" src="imgs/view-bio.png" alt="" /></span><span class="testopacity-wrapper"><span class="testopacity" style="display: none;">&nbsp;</span><img id="castimage4" class="cms-editable bio-image" src="/cms-assets/images/309376.cast-paul-vogt.jpg?rand=0.6428362734150141" alt="" /></span><span id="info4" class="cms-editable info">PAUL C. VOGT<br />(Amos Hart)</span></a></li>
               <li class="cms-repeat" id="castmember5"><a class="bio-pupop-link" href="#bio-popup5"><span class="view-bio-overlay" style="display: none;"><img class="bio-overlay-image" src="imgs/view-bio.png" alt="" /></span><span class="testopacity-wrapper"><span class="testopacity" style="display: none;">&nbsp;</span><img id="castimage5" class="cms-editable bio-image" src="imgs/cast-carol-woods.jpg" alt="" /></span><span id="info5" class="cms-editable info">CAROL WOODS<br />(Matron "Mama" Morton)</span></a></li>
@@ -362,43 +362,14 @@
 <script type="text/javascript" src="js/responsive-img-maps.js"></script>
 <script type="text/javascript" src="js/general.js"></script>
 
-<!-- START: Google Analytics Code -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-1243055-1', 'chicagothemusical.com');
-  ga('send', 'pageview');
 
-</script>
-<!-- END: Google Analytics Code -->
 
-<!-- START: Remarketing Code -->
-<!-- Google Code for Chicago Remarketing List -->
 <div style="display:none;"><!-- keeps from extra space being added to footer & causing 2 scrollbars with magnific popup -->
-<script type="text/javascript">
-/* <![CDATA[ */
-var google_conversion_id = 976959820;
-var google_custom_params = window.google_tag_params;
-var google_remarketing_only = true;
-/* ]]> */
-</script>
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-</script>
-<noscript>
-<div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/976959820/?value=0&amp;guid=ON&amp;script=0"/>
-</div>
-</noscript>
+
 
 </div>
 
-<!-- SPOT IFRAME -->
-<iframe src="http://img-cdn.mediaplex.com/0/21166/universal.html?page_name=chicago_site_visitor_pixels&Site_Visitor_Pixels=1&mpuid=" HEIGHT=1 WIDTH=1 FRAMEBORDER=0 class="mediaplex"></iframe>
-
-<!-- END: Remarketing Code -->
 
 </body>
 </html>
