--- a/cast2.html
+++ b/cast2.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
+  <link rel="stylesheet" style="text/css" href="styles/style_cast2.css">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  
   <script src="/js/bootstrap.min.js"></script>
@@ -36,10 +37,26 @@
   </div>
 
   <div class="content">
+    <table width="500" border="0" cellpadding="5">
 
+      <tr>
 
-  </div> <!-- content -->
+        <td align="center" valign="center">
+        <img src="images/tiziana.jpg" alt="description here" />
+        <br />
+        Caption text centered under the image.
+      </td>
 
+      <td align="center" valign="center">
+        <img src="http://yoursite.com/images/filename.jpg" alt="description here" />
+        <br />
+        Caption text centered under the image.
+      </td>
+
+      </tr>
+
+    </table>
+  </div>
 
 
 </body>
