--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" style="text/css" href="styles/bootstrap.min.css">
   <link rel="stylesheet" href="styles/font-awesome.min.css">
+  <link rel="stylesheet" style="text/css" href="styles/style_about.css">
   <link rel="stylesheet" style="text/css" href="styles/style.css">
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>  
   <script src="/js/bootstrap.min.js"></script>
@@ -36,6 +37,19 @@
   </div>
 
   <div class="content">
+    <div class="about_the_show">
+      <h2>THE #1 LONGEST-RUNNING AMERICAN MUSICAL IN BROADWAY HISTORY</h2>
+      <h3>Now in Its 18th Year on Broadway</h3>
+      <span style="color: red">WINNER OF SIX 1997 TONY AWARDS INCLUDING BEST MUSICAL REVIVAL</span><br/>
+<br/>
+      <p>A true New York City institution, LG has everything that makes Broadway great: a universal tale of fame, fortune and all that jazz; one show-stopping song after another; and the most astonishing dancing you've ever seen.</p> 
+
+      <p>No wonder LG has been honored with 6 Tony Awards®, 2 Olivier Awards®, a Grammy® and thousands of standing ovations.</p> 
+
+      <p>It's also no surprise that LG has wowed audiences all around the world, from Mexico City to Moscow, from São Paulo to South Africa.</p> 
+
+      <p>Whether you're looking for your first Broadway musical, whether you've seen the Academy Award®-winning film and want to experience the show live on stage or whether you've seen it before and want to recapture the magic, LG always delivers.</p>
+    </div>
 
 
   </div> <!-- content -->
