--- a/cast.html
+++ b/cast.html
@@ -48,7 +48,7 @@
   <div class="cms-repeat cms-editable" id="bio-popup-outer1">
   <div class="bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup1" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic1" class="cms-editable" src="images/tiziana.jpg" alt="" target="_top"/></div>
+  <div class="pic"><img id="pic1" class="cms-editable" src="images/Tiziana.jpg" alt="" target="_top"/></div>
   <div class="bio"><span id="name1" class="cms-editable name">TIZIANA PERINOTTI</span> <span id="role1" class="cms-editable role">(Gio)</span>
   <p id="biotext1" class="cms-editable biotext">Tiziana Perinotti, originally from Italy, made her Broadway in 2002 with this role. Other Broadway Credits: Daniela in In the Heights, Carmen in The Pajama Game. Regional credits: And the World Goes Round at Barrington Stage, Bye Bye Birdie at North Shore. Theatre in Italy: Disney's Mary Poppins and Beauty and the Beast, The Sound of Music, Rent, Phantom of the Opera, Chicago, Vagina Monolgues. Awards: 2004 Helen Hayes Award for the Chicago National Tour, IRNE Award for her role in Bye Bye Birdie, Premios Heraldo for Chicago in Italy. Television: "One Life to Live," Judge on "Mira Quien Baila" (Univision) and "Pequenos Gigantes" (Televisa). <br /><br /> Follow on Twitter <a>@biancamarroquin</a>.</p>
   </div>
