--- a/cast.html
+++ b/cast.html
@@ -49,7 +49,7 @@
   <div class="bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup1" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic1" class="cms-editable" src="images/Tiziana.jpg" alt="" target="_top"/></div>
-  <div class="bio"><span id="name1" class="cms-editable name">TIZIANA PERINOTTI</span> <span id="role1" class="cms-editable role">(Gio)</span>
+  <div class="bio"><span id="name1" class="cms-editable name">TIZIANA PERINOTTI</span> <span id="role1" class="cms-editable role">(Gio) - <em>the Dreamer</em></span>
   <p id="biotext1" class="cms-editable biotext">Tiziana Perinotti, originally from Italy, made her Broadway in 2002 with this role. Other Broadway Credits: Daniela in In the Heights, Carmen in The Pajama Game. Regional credits: And the World Goes Round at Barrington Stage, Bye Bye Birdie at North Shore. Theatre in Italy: Disney's Mary Poppins and Beauty and the Beast, The Sound of Music, Rent, Phantom of the Opera, Chicago, Vagina Monolgues. Awards: 2004 Helen Hayes Award for the Chicago National Tour, IRNE Award for her role in Bye Bye Birdie, Premios Heraldo for Chicago in Italy. Television: "One Life to Live," Judge on "Mira Quien Baila" (Univision) and "Pequenos Gigantes" (Televisa). <br /><br /> Follow on Twitter <a>@biancamarroquin</a>.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
@@ -59,8 +59,8 @@
           <div class="cms-repeat" id="bio-popup-outer2">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup2" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic2" class="cms-editable" src="imgs/cast-amra-faye-wright.jpg" alt="" /></div>
-  <div class="bio"><span id="name2" class="cms-editable name">COUNT CLOVER</span> <span id="role2" class="cms-editable role">(Omar)</span>
+  <div class="pic"><img id="pic2" class="cms-editable" src="images/omar.jpg" alt="" /></div>
+  <div class="bio"><span id="name2" class="cms-editable name">COUNT CLOVER</span> <span id="role2" class="cms-editable role">(Omar) - <em>the King of Tango</em></span>
   <p id="biotext2" class="cms-editable biotext">Returns to Broadway after playing Velma in Chicago in the West End, Adelphi Theatre ('05) Cambridge Theatre ('06-'08); Civic Theatre, Johannesburg; and Arts Theatre, Cape Town ('05, '08) (Naledi and Fleur du Cap Awards) in addition to European and UK tours, a concert production in Marbella and both 10th Anniversary productions (Broadway &amp; West End). Other theatrical credits include Vi Moore in Footloose (UK tour), Sandy in Grease at the Johannesburg Superbowl, Sheila in A Chorus Line (Civic Theatre, Jo'burg), Jack in Jack and the Beanstalk (Guild Theatre, London) and Viva Sun City (Extravaganza Theatre, Sun City). Amra-Faye has written and performed many one-woman shows, including It's Not Where I Start, Drinks on Me and Rouge Pulp, and starred in numerous musical extravaganzas worldwide. Her many commercial credits include soloist for SPAR International (Sun City Superbowl) and for the South African VIP Gala at the Sydney Olympics, and guest artist for World-Cup Rugby Gala.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
@@ -70,20 +70,97 @@
           <div class="cms-repeat" id="bio-popup-outer3">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic3" class="cms-editable" src="/cms-assets/images/390901.190fitzgc.jpg?rand=0.5290526032913476" alt="" /></div>
-  <div class="bio"><span id="name3" class="cms-editable name">LISETTE PERELLE</span> <span id="role3" class="cms-editable role">(Ariela)</span>
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/ariela.jpg" alt="" /></div>
+  <div class="bio"><span id="name3" class="cms-editable name">LISETTE PERELLE</span> <span id="role3" class="cms-editable role">(Ariela) - <em>the Diva</em></span>
   <p id="biotext3" class="cms-editable biotext">Lisette Perelle most recently starred opposite Kristin Wiig and Annette Bening in <em>Girl Most Likely</em> (Lionsgate). Broadway: <em>Merchant of Venice, Finian&rsquo;s&nbsp;Rainbow</em> (Drama Desk Award, Tony and OCC noms), <em>Young Frankenstein</em> (Tony, Drama Desk, OCC noms), <em>Wicked, Amour</em> (Drama Desk nom). Off-Broadway: <em>Observe the Sons of Ulster&hellip;</em> (LCT),&nbsp;<em>Saturday Night</em> (Second Stage, Drama Desk nom), <em>Wise Guys</em> (NYTW), <em>Corpus Christi </em>(MTC), <em>Cripple of Inishmaan</em> (Public), <em>Barnum</em> (Chichester Festival Theatre, UK). TV: &ldquo;Twins,&rdquo; &ldquo;Next Caller,&rdquo; &ldquo;The Electric Company.&rdquo; Film: <em>Larry Gaye: Renegade Male Flight Attendant, Personal Velocity</em>, <em>Dedication</em>.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
   </div>
   </div>
+
+            <div class="cms-repeat" id="bio-popup-outer3">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/robert.jpg" alt="" /></div>
+  <div class="bio"><span id="name3" class="cms-editable name">MONTY</span> <span id="role3" class="cms-editable role">(Robert) - <em>the Lawyer and His Secret</em></span>
+  <p id="biotext3" class="cms-editable biotext">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+
+
+  <div class="cms-repeat" id="bio-popup-outer3">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic3" class="cms-editable" src="/cms-assets/images/390901.190fitzgc.jpg?rand=0.5290526032913476" alt="" /></div>
+  <div class="bio"><span id="name3" class="cms-editable name">RAMADA SALIERI</span> <span id="role3" class="cms-editable role">(Brioso)</span>
+  <p id="biotext3" class="cms-editable biotext">Ramada Salieri was born and raised in San Francisco, and started his tango journey in mid 2007.  Ramada’s Tango Salon style is described as elegant, smooth, musical, and playful and is noted especially for the deep emotional expression of his dance movements.  Also a professional musician, he is able to interpret the complexities of the music of tango, which gives him a distinct advantage that he incorporates into his dance.  In 2012, Ramada and his partner finished 1st in the official Argentine Tango USA Championship Salon category.  They were sent to Buenos Aires to represent the USA in the annual World Cup Tango competition in that city.</p><p>  
+  Ramada has been featured in journalism and in documentary films about Argentine Tango, a music composer/producer, and provides sound and lighting for many of the festivals that pass through San Francisco, and is one of the official sound guys for the renowned bandoneonista Seth Asarnow y su Sexteto Tipico.  Recent sound and lighting work include that for Nora’s Tango Weekend, the Argentine Tango USA Championship, and the 1st Annual New Orleans Tango Festival.</p><p> 
+
+  As Ramada continues his journey, he shares much of the information that he has acquired along the way, and performs in various places throughout the San Francisco Bay Area and beyond.  </p><p>Ramada was featured in the award winning documentary T4Tango avail on Amazon</p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+
+
+  <div class="cms-repeat" id="bio-popup-outer4">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup4" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic4" class="cms-editable" src="images/Sonya.jpg" alt="" /></div>
+  <div class="bio"><span id="name4" class="cms-editable name">SONYA NAGASLAEVA</span> <span id="role4" class="cms-editable role">(Bellissima) - <em>Principal Dancer</em></span>
+  <p id="biotext4" class="cms-editable biotext">Originally from Russia, Sonya Nagaslaeva began dance lessons in early childhood. She chafed under traditional ballet style and explored other types of self-expression in art, such as contemporary dance, ballroom and contact improvisation. In 2002 she joined the Musical Theater of V.D. Stefaniev where she performed as a dancer and actress and got her first experience as a choreographer. In 2007, she moved to the US and in 2008 she was introduced to Argentine Tango. Tango became her biggest passion in life. Sonya trained in Chicago and eventually went to live in Buenos Aires to learn from the greatest maestros of the world.</p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+
+
+
+            <div class="cms-repeat" id="bio-popup-outer4">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup4" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic4" class="cms-editable" src="images/Alona.jpg" alt="" /></div>
+  <div class="bio"><span id="name4" class="cms-editable name">ALONA GORER</span> <span id="role4" class="cms-editable role">(Mirella) - <em>Featured Dancer</em></span>
+  <p id="biotext4" class="cms-editable biotext">Alona Gorer started to dance at the age of 12. She fell in love with
+      tango after seeing the “Forever Tango” show in New York City. While
+      Alona has dabbled in all flavors of the dance, her preferred styles
+      are the exquisitely elegant shades of Salon. She was frequently the
+      featured performer at milongas, and participated in stage productions.
+      Alona took silver in the 2013 Argentine Tango USA Championship (Salon
+      category, partnered with Leo Landa). Her passion for Argentine tango
+      is rivaled only by her passion for one-of-a-kind custom performance
+      dress design. “Love Junkies” features some of her recognizably lavish
+      custom dresses, including the “Diva Ariela” dress. Alona can be
+      frequently found at the milongas throughout the San Francisco Bay
+      Area.</p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+
+
+
           <div class="cms-repeat" id="bio-popup-outer4">
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup4" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
-  <div class="pic"><img id="pic4" class="cms-editable" src="/cms-assets/images/309376.cast-paul-vogt.jpg?rand=0.2542618829756975" alt="" /></div>
-  <div class="bio"><span id="name4" class="cms-editable name">LEO LANDA</span> <span id="role4" class="cms-editable role">(Fernando)</span>
-  <p id="biotext4" class="cms-editable biotext">Broadway:&nbsp;<em>Hairspray</em>&nbsp;(Edna Turnblad). Regional:&nbsp;replaced&nbsp;Harvey Fierstein&nbsp;in Vegas <em>Hairspray</em>, he's the only male to play&nbsp;Ursula in <em>Disney's Little Mermaid</em>&nbsp;(MUNY),&nbsp;<em>Laurel &amp; Hardy</em>&nbsp;(Falcon Theatre - West Coast Premiere),&nbsp;<em>Idaho&nbsp;</em>(Forestburgh - World Premiere) <em>Funny Thing...Forum</em>&nbsp;(Paper Mill),&nbsp;<em>Hairspray</em>&nbsp;(NSMT, Sacramento, MUNY, PCLO, TUTs),&nbsp;<em>Disney&rsquo;s Aladdin</em>&nbsp;(Tuacahn),&nbsp;<em>Minsky's</em>&nbsp;(Ahmanson - World Premiere). Film:&nbsp;<em>Valentine&rsquo;s Day</em>,&nbsp;<em>Princess Diaries 2</em>,&nbsp;<em>Good Boy</em>,&nbsp;<em>Lilo &amp; Stitch 2</em>,&nbsp;<em>Raising Helen</em>. TV: "MADtv", "Rerun Show",&nbsp;"Raising Hope", "Glee,&rdquo; Grey's Anatomy,&rdquo; Hannah Montana,&rdquo; Arrested Development,&rdquo; Reno 911,&rdquo; Maximum Bob." Twitter:@therealpaulvogt &amp;&nbsp;<span class="s1"><a href="http://www.paulcvogt.com/" target="_blank">www.paulcvogt.com</a><br /></span></p>
+  <div class="pic"><img id="pic4" class="cms-editable" src="images/Leo.jpg" alt="" /></div>
+  <div class="bio"><span id="name4" class="cms-editable name">LEO LANDA</span> <span id="role4" class="cms-editable role">(Fernando) - <em>Featured Dancer, Bartender</em></span>
+  <p id="biotext4" class="cms-editable biotext">Leo Landa had an intense interest in tango music of all kinds since
+      before he can remember. Upon encountering the dance of Argentine
+      tango, he became a devoted student of the art, quickly turning into an
+      avid tanguero on the local Argentine tango scene. He most enjoys
+      social, intimate styles. Leo has performed at various local milongas
+      and on stage. Leo took silver in the 2013 Argentine Tango USA
+      Championship (Salon category, partnered with Alona Gorer). He can be
+      frequently found at the milongas throughout the San Francisco Bay
+      Area.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
   </div>
