--- a/index.html
+++ b/index.html
@@ -41,6 +41,17 @@
     <div class="subtitle"><em>by Tiziana Perinotti</em></div>
     <div class="tiziana"><img src="images/Tiziana.jpg" height="90"></div>
 
+    <div class="main_text">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </p>
+    </div>
+
+    <div class = "main_page_content">
+      <p>Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum</p>
+      <img src="images/poster.jpg"/  alt="Love Junkies Cast" title="Love Junkies Cast">
+    </div>
+
   </div> <!-- content -->
 
 
