--- a/photos_videos.html
+++ b/photos_videos.html
@@ -66,7 +66,7 @@
                     <img src="images/Ramada&Sonya.jpg" width="700" height="450" alt="Demo2 third" title="Demo2 third" />
                     <div class="SliderName_2Description">Some Dancers: <strong>Us</strong></div>
                     <img src="images/Tiziana.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
-                    <div class="SliderName_2Description">Featured model: <strong>Charlize Theron</strong></div>
+                    <div class="SliderName_2Description">Featured model: <strong>Tiziana Perinotti</strong></div>
                     <img src="images/tj_rj_gio.jpg" width="700" height="450" alt="Demo2 fourth" title="Demo2 fourth" />
                     <div class="SliderName_2Description">Actors: <strong>TJ, Gio, RJ</strong></div>
                 </div>
