--- a/cast.html
+++ b/cast.html
@@ -60,7 +60,7 @@
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup2" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic2" class="cms-editable" src="images/omar.jpg" alt="" /></div>
-  <div class="bio"><span id="name2" class="cms-editable name">COUNT CLOVER</span> <span id="role2" class="cms-editable role">(Omar) - <em>the King of Tango</em></span>
+  <div class="bio"><span id="name2" class="cms-editable name">COUNT GLOVER</span> <span id="role2" class="cms-editable role">(Omar) - <em>the King of Tango</em></span>
   <p id="biotext2" class="cms-editable biotext">Returns to Broadway after playing Velma in Chicago in the West End, Adelphi Theatre ('05) Cambridge Theatre ('06-'08); Civic Theatre, Johannesburg; and Arts Theatre, Cape Town ('05, '08) (Naledi and Fleur du Cap Awards) in addition to European and UK tours, a concert production in Marbella and both 10th Anniversary productions (Broadway &amp; West End). Other theatrical credits include Vi Moore in Footloose (UK tour), Sandy in Grease at the Johannesburg Superbowl, Sheila in A Chorus Line (Civic Theatre, Jo'burg), Jack in Jack and the Beanstalk (Guild Theatre, London) and Viva Sun City (Extravaganza Theatre, Sun City). Amra-Faye has written and performed many one-woman shows, including It's Not Where I Start, Drinks on Me and Rouge Pulp, and starred in numerous musical extravaganzas worldwide. Her many commercial credits include soloist for SPAR International (Sun City Superbowl) and for the South African VIP Gala at the Sydney Olympics, and guest artist for World-Cup Rugby Gala.</p>
   </div>
   <div style="clear: both;">&nbsp;</div>
