--- a/cast.html
+++ b/cast.html
@@ -83,7 +83,20 @@
   <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
   <div class="bio-popup-wrapper">
   <div class="pic"><img id="pic3" class="cms-editable" src="images/robert.jpg" alt="" /></div>
-  <div class="bio"><span id="name3" class="cms-editable name">MONTY</span> <span id="role3" class="cms-editable role">(Robert) - <em>the Lawyer and His Secret</em></span>
+  <div class="bio"><span id="name3" class="cms-editable name">MONTGOMERY PAULSEN</span> <span id="role3" class="cms-editable role">(Robert) - <em>the Lawyer and His Secret</em></span>
+  <p id="biotext3" class="cms-editable biotext">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
+  </div>
+  <div style="clear: both;">&nbsp;</div>
+  </div>
+  </div>
+  </div>
+
+
+  <div class="cms-repeat" id="bio-popup-outer3">
+  <div class="cms-repeat bio-popup small-11 small-centered large-6 large-centered columns" id="bio-popup3" style="background-color: #131618; border-top: 5px solid #ba1a20;">
+  <div class="bio-popup-wrapper">
+  <div class="pic"><img id="pic3" class="cms-editable" src="images/danilo.jpg" alt="" /></div>
+  <div class="bio"><span id="name3" class="cms-editable name">HEREN PATEL</span> <span id="role3" class="cms-editable role">(Danilo) - <em>Mama's Boy</em></span>
   <p id="biotext3" class="cms-editable biotext">Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum Lorem Ipsum </p>
   </div>
   <div style="clear: both;">&nbsp;</div>
