--- a/photos_videos.html
+++ b/photos_videos.html
@@ -12,7 +12,7 @@
         body { background-color: #444444; }
         .c { clear: both; }
         #wrapper { margin: 0 auto; padding: 0 40px 60px 40px; width: 960px; }
-        h2 { padding: 29px 0 3px 130px; font-size: 24px; line-height: 40px; font-weight: normal; color: #4169E1; text-shadow: 0 1px 3px #222222; }
+        h2 { padding: 29px 0 3px 130px; font-size: 24px; line-height: 40px; font-weight: normal; color: #4169E1; text-shadow: 2px 3px 3px #CC3399; }
     </style>
 
     <!-- sliderman.js -->
