--- a/about.html
+++ b/about.html
@@ -38,17 +38,17 @@
 
   <div class="content">
     <div class="about_the_show">
-      <h2>THE #1 LONGEST-RUNNING AMERICAN MUSICAL IN BROADWAY HISTORY</h2>
-      <h3>Now in Its 18th Year on Broadway</h3>
-      <span style="color: red">WINNER OF SIX 1997 TONY AWARDS INCLUDING BEST MUSICAL REVIVAL</span><br/>
+      <h2>THE GRAND PREMIERE</h2>
+      <h3>October 3-5, in American Conservatory Theater, San Francisco</h3>
+      <span style="color: #CC0033">From the creator of the award-winning "T4Tango"</span><br/>
 <br/>
-      <p>A true New York City institution, LG has everything that makes Broadway great: a universal tale of fame, fortune and all that jazz; one show-stopping song after another; and the most astonishing dancing you've ever seen.</p> 
+      <p>Love Junkies is a broadway style musical celebrating Love in many of its aspects, playful, romantic, intimate, erotic, seductive, fatherly, friendly, committed, uncommitted.</p> 
 
-      <p>No wonder LG has been honored with 6 Tony Awards®, 2 Olivier Awards®, a Grammy® and thousands of standing ovations.</p> 
+      <p>Love Junkies characters crave it, chase it, discover it, cope with the lack or loss of it in their own way, some are able to channel it into love for something else.</p> 
 
-      <p>It's also no surprise that LG has wowed audiences all around the world, from Mexico City to Moscow, from São Paulo to South Africa.</p> 
+      <p>Loss and tragedy spin the Love Junkies into their "dark night of the soul" experience that allows them to get in touch with their shadow parts, and also bring up a sense of compassion for themselves and others, even in unexpected moments and circumstances.</p> 
 
-      <p>Whether you're looking for your first Broadway musical, whether you've seen the Academy Award®-winning film and want to experience the show live on stage or whether you've seen it before and want to recapture the magic, LG always delivers.</p>
+      <p>The Love as Life Force wants to live and move forwards even in Love Junkies.</p>
     </div>
 
 
