--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <div class="main_text">
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        11 intriguing "Love Addicts" with different backgrounds and aspirations, at different phases in life, meet by chance in San Francisco and get transformed by their fascination for the world of Tango. Seductive dance, fashion, passion, love triangles, intrigues. Sex In The City meets Dirty Dancing. 
       </p>
     </div>
 
